--- a/static/index.html
+++ b/static/index.html
@@ -158,7 +158,23 @@
 
         if(result.status === 'ok'){
             alert('Użytkownik zalogowany!')
-            window.open('portal.html')
+            const token = result.data
+            const redirect = await fetch('/api/portal', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    token
+                })
+            }).then((res) => res.json())
+            if(redirect.status === 'ok'){
+                window.open('portal.html',"_self")
+            }
+            else {
+                alert("Błąd autoryzacji")
+            }
+            result.json()
         } else {
             alert(result.error)
         }
