--- a/static/index.html
+++ b/static/index.html
@@ -157,23 +157,8 @@
 
         if(result.status === 'ok'){
             alert('Użytkownik zalogowany!')
-            const token = result.data
-            const redirect = await fetch('/api/portal', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    token
-                })
-            }).then((res) => res.json())
-            if(redirect.status === 'ok'){
-                window.open('portal.html',"_self")
-            }
-            else {
-                alert("Błąd autoryzacji")
-            }
-            result.json()
+            window.open('portal.html',"_self")
+            // result.json()
         } else {
             alert(result.error)
         }
