--- a/private/portal.html
+++ b/private/portal.html
@@ -67,7 +67,7 @@
                         </div>
                         </br>
                         <h5>Subject</h5>
-                        <input type="text" class="form-control" name="Subject" id="subject" placeholder="example@example.com" >
+                        <input type="text" class="form-control" name="Subject" id="subject" placeholder="Your subject..." >
                         </br>
                         <h5>Text</h5>
                         <textarea class="form-control" name="text" id="dataText" placeholder="Your message..." rows='18'></textarea>
